--- a/DocsUploaderApplication/DocsUploaderApplication.csproj
+++ b/DocsUploaderApplication/DocsUploaderApplication.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="6.0.19" />
   </ItemGroup>
 
