Add connection string stuff

--- a/DocsUploaderApplication/appsettings.json
+++ b/DocsUploaderApplication/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "SendGridApiKey": "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"
 }
